# GyroJAX

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
benchmarks/: _dimits_small_pert_step1.py  _dimits_small_pert_step3.py  _fullf_noise_floor.py  _quick_check.py  _quick_check2.py  cbc_benchmark.py  cbc_em_benchmark.py  cbc_fullf.py  classical_gk_suite.py  classical_gk_suite_results.json  collision_scan.py  cyclone_base_case.py  cyclone_base_case_fa.py  dimits_clean.py  dimits_shift.py  dimits_shift_fullf.py  dimits_shift_medium.py  dimits_shift_optimized.py  gamma_spectrum.py  global_cbc.py  heat_flux_cbc.py  index.html  itg_stellarator_scan.py  kbm_benchmark.py  kbm_fullf.py  kbm_nonlinear.py  kinetic_electron_cbc.py  production_validation.py  rosenbluth_hinton.py  stellarator_itg.py
config/: index.html
contributing/: index.html
docs/: benchmarks.md  config.md  contributing.md  index.md  physics.md  quickstart.md
gyrojax/: __init__.py  __main__.py  input.py  normalization.py  runner.py  sharding.py  simulation.py  simulation_fa.py  simulation_fullf.py  simulation_sharded.py  utils.py
gyrojax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
inputs/: cbc.toml  cbc_fullf.toml  dimits.toml  rosenbluth_hinton.toml
physics/: index.html
quickstart/: index.html
search/: search_index.json
tests/: test_collisions.py  test_electromagnetic.py  test_em.py  test_geometry.py  test_global.py  test_global_domain.py  test_input.py  test_input_file.py  test_kinetic_electrons.py  test_long_run.py  test_normalization.py  (+12 more)
(+48 files in other folders)
